package com.example.hw1.helloworld;


public class HelloWorld {
    public static void main(String[] args) {
        System.out.println("Hello World!");
    }
}
