@startuml

title __SOLVD's Class Diagram__\n

  namespace com.example.hw1.helloworld {
    class com.example.hw1.helloworld.HelloWorld {
    }
  }
  

  namespace com.example.hw1.methodsoverriding {
    class com.example.hw1.methodsoverriding.Person {
    }
  }
  

  namespace com.example.hw1.methodsoverriding {
    class com.example.hw1.methodsoverriding.TestPerson {
    }
  }
  

  namespace com.example.hw1.quicksort {
    class com.example.hw1.quicksort.QuickSort {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Address {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Car {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Citizen {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.City {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Commercial {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.CommercialTax {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Conventional {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Employee {
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Person {
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Property {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Residential {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.ResidentialTax {
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Tax {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.TownHallTest {
    }
  }
  

  namespace com.example.hw2.townhall {
    class com.example.hw2.townhall.Truck {
    }
  }
  

  namespace com.example.hw2.townhall {
    abstract class com.example.hw2.townhall.Vehicle {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Address {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Car {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Citizen {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.City {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Commercial {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.CommercialTax {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Conventional {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Employee {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    interface com.example.hw3.townhallinterfaces.IOwnerDetails {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    interface com.example.hw3.townhallinterfaces.ITaxable {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    abstract class com.example.hw3.townhallinterfaces.Person {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    abstract class com.example.hw3.townhallinterfaces.Property {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Residential {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.ResidentialTax {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    abstract class com.example.hw3.townhallinterfaces.Tax {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.TownHallTest {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    class com.example.hw3.townhallinterfaces.Truck {
    }
  }
  

  namespace com.example.hw3.townhallinterfaces {
    abstract class com.example.hw3.townhallinterfaces.Vehicle {
    }
  }
  

  com.example.hw2.townhall.Car -up-|> com.example.hw2.townhall.Vehicle
  com.example.hw2.townhall.Citizen -up-|> com.example.hw2.townhall.Person
  com.example.hw2.townhall.Citizen o-- com.example.hw2.townhall.Address : address
  com.example.hw2.townhall.Commercial -up-|> com.example.hw2.townhall.Property
  com.example.hw2.townhall.CommercialTax -up-|> com.example.hw2.townhall.Tax
  com.example.hw2.townhall.Conventional -up-|> com.example.hw2.townhall.Vehicle
  com.example.hw2.townhall.Employee -up-|> com.example.hw2.townhall.Person
  com.example.hw2.townhall.Property o-- com.example.hw2.townhall.Address : address
  com.example.hw2.townhall.Property o-- com.example.hw2.townhall.Person : owner
  com.example.hw2.townhall.Residential -up-|> com.example.hw2.townhall.Property
  com.example.hw2.townhall.ResidentialTax -up-|> com.example.hw2.townhall.Tax
  com.example.hw2.townhall.Truck -up-|> com.example.hw2.townhall.Vehicle
  com.example.hw3.townhallinterfaces.Car -up-|> com.example.hw3.townhallinterfaces.Vehicle
  com.example.hw3.townhallinterfaces.Citizen -up-|> com.example.hw3.townhallinterfaces.Person
  com.example.hw3.townhallinterfaces.Citizen o-- com.example.hw3.townhallinterfaces.Address : address
  com.example.hw3.townhallinterfaces.Commercial .up.|> com.example.hw3.townhallinterfaces.IOwnerDetails
  com.example.hw3.townhallinterfaces.Commercial .up.|> com.example.hw3.townhallinterfaces.ITaxable
  com.example.hw3.townhallinterfaces.Commercial -up-|> com.example.hw3.townhallinterfaces.Property
  com.example.hw3.townhallinterfaces.CommercialTax -up-|> com.example.hw3.townhallinterfaces.Tax
  com.example.hw3.townhallinterfaces.Conventional -up-|> com.example.hw3.townhallinterfaces.Vehicle
  com.example.hw3.townhallinterfaces.Employee -up-|> com.example.hw3.townhallinterfaces.Person
  com.example.hw3.townhallinterfaces.Property o-- com.example.hw3.townhallinterfaces.Address : address
  com.example.hw3.townhallinterfaces.Property o-- com.example.hw3.townhallinterfaces.Person : owner
  com.example.hw3.townhallinterfaces.Residential .up.|> com.example.hw3.townhallinterfaces.IOwnerDetails
  com.example.hw3.townhallinterfaces.Residential .up.|> com.example.hw3.townhallinterfaces.ITaxable
  com.example.hw3.townhallinterfaces.Residential -up-|> com.example.hw3.townhallinterfaces.Property
  com.example.hw3.townhallinterfaces.ResidentialTax -up-|> com.example.hw3.townhallinterfaces.Tax
  com.example.hw3.townhallinterfaces.Truck -up-|> com.example.hw3.townhallinterfaces.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
